# vidvlog

./: README.md  config_default.py  get_girls.py  make_video.py  past_actriz.txt  presta atencao no que programa.txt  pyproject.toml  send.py  send_art18.py  send_dev.py  send_fofoca.py  send_geek.py  send_news.py  send_philo.py  test.py  test_img.py  work.txt
studio_art18/: d.py  get_all_girls.py  get_girls.py  list_actriz.txt  past_actriz.txt  test.py  test_video.py
test/: d.py  news_to.py
vidvlog/art18/: bing_img.py  create_img.py  make_video_actress.py  make_video_actriz.py  painel_actriz.py
vidvlog/news/: make_news.py  make_voice.py  news.py  video_news.py
work/art18/: list_actriz.txt
work/dev/public/: news.txt
work/fofoca/: sad_fofoca_song.m4a
work/fofoca/public/: fofoca.txt
work/geek/public/: news.txt
work/news/public/: news.txt
work/philo/public/: news.txt
